src/test/test-models/bad/err-if-else-no-cond.stan
transformed data {
  real y;
  if () y <- 2;
}
model {
}
